--- a/employee_etl.ipynb
+++ b/employee_etl.ipynb
@@ -504,13 +504,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Database Credentials\n",
     "username = 'postgres'\n",
-    "password = 'data'\n",
+    "password = ''\n",
     "host = 'localhost'\n",
     "port = '5432'\n",
     "db_name = 'postgres'"
